--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,9 +2,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    background-color: transparent;
     padding: 2rem 6rem;
+    position: absolute;
 }
+
+
 
 .gpt3__navbar-links {
     flex: 1;
