--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -6,19 +6,19 @@
     background: var(--color-footer),url('../../assets/artwor.png');
 
     /* ff 3.6+ */
-    /* background:-moz-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png'); */
+    background:-moz-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png');
 
     /* safari 5.1+,chrome 10+ */
-    /* background:-webkit-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png'); */
+    background:-webkit-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png');
 
     /* opera 11.10+ */
-    /* background:-o-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png'); */
+    background:-o-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png');
 
     /* ie 10+ */
-    /* background:-ms-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png'); */
+    background:-ms-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png');
 
     /* global 92%+ browsers support */
-    /* background:radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png'); */
+    background:radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%),url('../../assets/artwor.png');
 
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
