--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,56 +1,86 @@
 .contactr{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50% );
-    background-color: aqua;
-    padding: 5px;
-    width: 70rem;
-    height: 40rem;
-}
-
-
-
-.form {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
-  width: 100%;
-  font-size: 16px;
+  padding: 3rem 0;
+  background:-moz-radial-gradient(circle at 3% 20%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 26%);
+
+  /* safari 5.1+,chrome 10+ */
+  background:-webkit-radial-gradient(circle at 3% 20%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 26%);
+
+  /* opera 11.10+ */
+  background:-o-radial-gradient(circle at 3% 20%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 26%);
+
+  /* ie 10+ */
+  background:-ms-radial-gradient(circle at 3% 20%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 26%);
+
+  /* global 92%+ browsers support */
+  background:radial-gradient(circle at 3% 20%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 26%);
 }
-.input {
-    width: 100%;
-    height: 35px;
-    padding: 7px;
-    outline: black solid 1px;
-    border-radius: 5px;
-    border: 1px solid rgb(220, 220, 220);
+form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 60%;
+  font-size: 16px;
+  
+}
+form input {
+  width: 100%;
+  height: 35px;
+  padding: 7px;
+  /* outline: black solid 1px; */
+  /* border-radius: 5px; */
+  border: none;
+  border-bottom: 2px solid rgb(220, 220, 220);
+  background-color: transparent;
+  color :white;
+}
+form input:focus {
+  border: none;
+  border-bottom: 3px solid #AE67FA;
+  outline: none;
+  transition: all 1s ease-in-out;
+}
+form textarea {
+  color :white;
+  max-width: 100%;
+  min-width: 100%;
+  width: 100%;
+  max-height: 100px;
+  min-height: 100px;
+  padding: 7px;
+  /* outline: black solid 1px; */
+  border: none;
+  /* border: .5px solid rgb(117, 117, 117); */
+  border-bottom: 2px solid rgb(220, 220, 220);
+  background-color: transparent;
+}
+form textarea:focus {
+  border: none;
+  border-bottom: 3px solid #AE67FA;
+  outline: none;
+}
+form label {
+  margin-top: 1rem;
+  width: 100%;
+  color: white;
+}
+form input[type=submit] {
+  margin-top: 2rem;
+  cursor: pointer;
+  background: rgb(249, 105, 14);
+  color: white;
+  border: none;
+  width: 60%;
+  border-radius: 4px;
+}
+form input::placeholder,textarea::placeholder{
+  color: rgb(203, 208, 212);
+}
+form input:focus::placeholder{
+  /* color: aliceblue; */
+  opacity: 0;
+}
 
-    
-  }
 
-.textarea {
-    max-width: 100%;
-    min-width: 100%;
-    width: 100%;
-    max-height: 100px;
-    min-height: 100px;
-    padding: 7px;
-    outline: black solid 1px;
-    border-radius: 5px;
-    border: 1px solid rgb(220, 220, 220);
-
-   
-  }
-
-.label {
-    margin-top: 1rem;
-  }
-
-.input[type="submit"] {
-    margin-top: 2rem;
-    cursor: pointer;
-    background: rgb(249, 105, 14);
-    color: white;
-    border: none;
-  }
