--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,4 +1,4 @@
-.gpt3__header {
+.alpha__header {
     display: flex;
     flex-direction: row;
     background:-moz-radial-gradient(circle at 3% 20%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 26%);
@@ -16,7 +16,7 @@
   background:radial-gradient(circle at 3% 20%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 26%);
 }
 
-.gpt3__header-content {
+.alpha__header-content {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -26,7 +26,7 @@
     margin-right: 5rem;
 }
 
-.gpt3__header-content h1 {
+.alpha__header-content h1 {
     font-family: var(--font-family);
     font-weight: 800;
     font-size: 62px;
@@ -34,7 +34,7 @@
     letter-spacing: -0.04em;
 }
 
-.gpt3__header-content p {
+.alpha__header-content p {
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 20px;
@@ -44,7 +44,7 @@
     margin-top: 1.5rem;
 }
 
-.gpt3__header-content__input {
+.alpha__header-content__input {
     width: 100%;
     margin: 2rem 0 1rem;
 
@@ -52,7 +52,7 @@
     flex-direction: row;
 }
 
-.gpt3__header-content__input input {
+.alpha__header-content__input input {
     flex: 2;
     width: 100%;
     min-height: 50px;
@@ -70,7 +70,7 @@
     border-bottom-left-radius: 5px;
 }
 
-.gpt3__header-content__input button {
+.alpha__header-content__input button {
     flex: 0.6;
     width: 100%;
     min-height: 50px;
@@ -89,7 +89,7 @@
     border-bottom-right-radius: 5px;
 }
 
-.gpt3__header-content__people {
+.alpha__header-content__people {
     width: 100%;
     display: flex;
     justify-content: flex-start;
@@ -99,12 +99,12 @@
     margin-top: 2rem;
 }
 
-.gpt3__header-content__people img {
+.alpha__header-content__people img {
     width: 181.79px;
     height: 38px;
 }
 
-.gpt3__header-content__people p {
+.alpha__header-content__people p {
     margin: 0 0 0 1rem;
     font-family: var(--font-family);
     font-weight: 500;
@@ -114,67 +114,67 @@
     text-align: center;
 }
 
-.gpt3__header-image {
+.alpha__header-image {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.gpt3__header-image img {
+.alpha__header-image img {
     width: 100%;
     height: 100%;
 }
 
 @media screen and (max-width: 1050px) {
-    .gpt3__header {
+    .alpha__header {
         flex-direction: column;
     }
 
-    .gpt3__header-content {
+    .alpha__header-content {
         margin: 0 0 3rem;
     }
 }
 
 @media screen and (max-width: 650px) {
-    .gpt3__header-content h1 {
+    .alpha__header-content h1 {
         font-size: 48px;
         line-height: 60px;
     }
 
-    .gpt3__header-content p {
+    .alpha__header-content p {
         font-size: 16px;
         line-height: 24px;
     }
     
-    .gpt3__header-content__people {
+    .alpha__header-content__people {
         flex-direction: column;
     }
 
-    .gpt3__header-content__people p {
+    .alpha__header-content__people p {
         margin: 0;
     }
 
-    .gpt3__header-content__input input,
-    .gpt3__header-content__input button {
+    .alpha__header-content__input input,
+    .alpha__header-content__input button {
         font-size: 16px;
         line-height: 24px;
     }
 }
 
 @media screen and (max-width: 490px) {
-    .gpt3__header-content h1 {
+    .alpha__header-content h1 {
         font-size: 36px;
         line-height: 48px;
     }
 
-    .gpt3__header-content p {
+    .alpha__header-content p {
         font-size: 14px;
         line-height: 24px;
     }
 
-    .gpt3__header-content__input input,
-    .gpt3__header-content__input button {
+    .alpha__header-content__input input,
+    .alpha__header-content__input button {
         font-size: 12px;
         line-height: 16px;
     }
