--- a/src/containers/policy/policy.css
+++ b/src/containers/policy/policy.css
@@ -1,4 +1,4 @@
-.gpt3__possibility {
+.alpha__possibility {
     display: flex;
     flex-direction: row;
     background:-moz-radial-gradient(circle at 3% 20%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 26%);
@@ -16,7 +16,7 @@
     background:radial-gradient(circle at 3% 20%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 26%);
 }
 
-.gpt3__possibility-image {
+.alpha__possibility-image {
     flex: 1;
     display: flex;
     justify-content: flex-start;
@@ -25,12 +25,12 @@
     margin-right: 2rem;
 }
 
-.gpt3__possibility-image img {
+.alpha__possibility-image img {
     width: 100%;
     height: 100%;
 }
 
-.gpt3__possibility-content {
+.alpha__possibility-content {
     flex: 1;
     display: flex;
     justify-content: flex-end;
@@ -38,7 +38,7 @@
     flex-direction: column;
 }
 
-.gpt3__possibility-content h4 {
+.alpha__possibility-content h4 {
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 16px;
@@ -46,11 +46,11 @@
     color: #71E5FF;
 }
 
-.gpt3__possibility-content h4:last-child {
+.alpha__possibility-content h4:last-child {
     color: #ff8A71;
 }
 
-.gpt3__possibility-content h1 {
+.alpha__possibility-content h1 {
     font-family: var(--font-family);
     font-weight: 800;
     font-size: 34px;
@@ -58,7 +58,7 @@
     margin: 1rem 0;
 }
 
-.gpt3__possibility-content p {
+.alpha__possibility-content p {
     color: var(--color-text);
     font-family: var(--font-family);
     font-weight: 400;
@@ -69,26 +69,26 @@
 }
 
 @media screen and (max-width: 950px) {
-    .gpt3__possibility {
+    .alpha__possibility {
         flex-direction: column;
     }
 
-    .gpt3__possibility-image {
+    .alpha__possibility-image {
         margin: 1rem 0;
     }
 
-    .gpt3__possibility-image img {
+    .alpha__possibility-image img {
         width: unset;
         height: unset;
     }
 
-    .gpt3__possibility-content {
+    .alpha__possibility-content {
         margin-top: 2rem;
     }
 }
 
 @media screen and (max-width: 700px) {
-    .gpt3__possibility-image img {
+    .alpha__possibility-image img {
         width: 100%;
         height: 100%;
     }
