--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -1,4 +1,4 @@
-.gpt3__whatgpt3 {
+.alpha__whatalpha {
     display: flex;
     flex-direction: column;
 
@@ -23,22 +23,22 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.gpt3__whatgpt3-feature {
+.alpha__whatalpha-feature {
     display: flex;
     /* background-image: url(../../assets/artwor.png); */
 }
 
 /* Customizing feature component as per needs */
-.gpt3__whatgpt3-feature .gpt3__features-container__feature {
+.alpha__whatalpha-feature .alpha__features-container__feature {
     margin: 0;
 }
 
 /* Customizing feature component as per needs */
-.gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
+.alpha__whatalpha-feature .alpha__features-container_feature-text {
     max-width: 700px;
 }
 
-.gpt3__whatgpt3-heading {
+.alpha__whatalpha-heading {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -47,7 +47,7 @@
     margin: 4rem 0 2rem;
 }
 
-.gpt3__whatgpt3-heading h1 {
+.alpha__whatalpha-heading h1 {
     font-size: 34px;
     line-height: 45px;
     font-weight: 800;
@@ -55,7 +55,7 @@
     max-width: 510px;
 }
 
-.gpt3__whatgpt3-heading p {
+.alpha__whatalpha-heading p {
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 16px;
@@ -64,7 +64,7 @@
     cursor: pointer;
 }
 
-.gpt3__whatgpt3-container {
+.alpha__whatalpha-container {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -73,7 +73,7 @@
 }
 
 /* Customizing feature component as per needs */
-.gpt3__whatgpt3-container .gpt3__features-container__feature {
+.alpha__whatalpha-container .alpha__features-container__feature {
     flex: 1;
     margin: 1rem;
     min-width: 210px;
@@ -82,34 +82,34 @@
 }
 
 /* Customizing feature component as per needs */
-.gpt3__whatgpt3-container .gpt3__features-container_feature-text {
+.alpha__whatalpha-container .alpha__features-container_feature-text {
     margin-top: 0.5rem;
 }
 
 @media screen and (max-width: 850px) {
-    .gpt3__whatgpt3-heading {
+    .alpha__whatalpha-heading {
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 0rem;
     }
 
-    .gpt3__whatgpt3-heading p {
+    .alpha__whatalpha-heading p {
         margin-top: 1rem;
     }
 }
 
 @media screen and (max-width: 650px) {
     /* Customizing feature component as per needs */
-    .gpt3__whatgpt3-feature .gpt3__features-container__feature {
+    .alpha__whatalpha-feature .alpha__features-container__feature {
         flex-direction: column;
     }
 
     /* Customizing feature component as per needs */
-    .gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
+    .alpha__whatalpha-feature .alpha__features-container_feature-text {
         margin-top: 0.5rem;
     }
 
-    .gpt3__whatgpt3-heading h1 {
+    .alpha__whatalpha-heading h1 {
         font-size: 28px;
         line-height: 40px;
     }
@@ -117,7 +117,7 @@
 
 @media screen and (max-width: 350px) {
     /* Customizing feature component as per needs */
-    .gpt3__whatgpt3-container .gpt3__features-container__feature {
+    .alpha__whatalpha-container .alpha__features-container__feature {
         margin: 1rem 0;
         min-width: 100%;
     }
